@@ -1,12 +1,12 @@
 %%
 %%
-%%  <filename>
+%%  [File]
 %%  
-%%   [file description]
+%%   <file description>
 %%
-%%   Part of Books20 Project
+%%   Part of the Books20 Project
 %%
-%%   Copyright 2018 James R. Fowler
+%%   Copyright [Year] James R. Fowler
 %%
 %%   All rights reserved. No part of this publication may be
 %%   reproduced, stored in a retrival system, or transmitted
@@ -16,3 +16,5 @@
 %%
 %%
 %%
+
+
